--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <body>
 <main>
   <section> 
-      <div class="BGimg" role="img" aria-label="Square sized see through bottle of light yellow perfume. Green leaves decoration next to bottle">
+      <div class="BGimg">
+      <picture>
+        <source media="(max-width: 480px") srcset="images/image-product-mobile.jpg">
+        <img src="images/image-product-desktop.jpg" alt="Square sized see through bottle of light yellow perfume. Green leaves decoration next to bottle">
+      </picture>
       </div> 
       <div class="Product_Des">
         <p class="toUpperCase">Perfume</p> 
